# simd-lookup

./: Cargo.toml
benches/: entropy_map_bench.rs  lookup_bench.rs  table64_bench.rs
examples/: eight_value_demo.rs
src/: eight_value_lookup.rs  entropy_map_lookup.rs  lib.rs  lookup.rs  table64.rs
