[package]
name = "simd-lookup"
version = "0.1.0"
edition = "2024"

[dependencies]
simd_aligned = "0.6"
rustc-hash = "2.0"
entropy-map = "1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "table64_bench"
harness = false

[[bench]]
name = "lookup_bench"
harness = false

[[bench]]
name = "entropy_map_bench"
harness = false

[[example]]
name = "eight_value_demo"
